# agb2026

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CITATIONS.md  LICENSE copy  MicroSee.html  README.md  main.nf  modules.json  nextflow.config  nextflow_schema.json  ro-crate-metadata.json  select_rarefaction_depth.py
.github/workflows/: docker-report.yml  microsee_report_ci.yml  test.yml
Group_B/: README.md  README_Group_B.md  main.nf  nextflow_master_2879358.err  nextflow_schema.json  run.sbatch  run.sh  run_backup.sh  test_groupB.nf
Group_B/Group_B/: .gitignore  modules.json  nextflow.config
Group_B/assets/: samplesheet_test.csv
Group_B/conf/: test.config  test_full.config
Group_B/subworkflows/: README_Group_B.md
Group_B/tests/: nextflow.config
Group_B/workflows/: groupB.nf
alphaflow/: CITATIONS.md  README.md  README2.md  main.nf
alphaflow/assets/: email_template.html  email_template.txt  multiqc_config.yml  schema_input.json  sendmail_template.txt
alphaflow/docs/: output.md
alphaflow_backup/: CHANGELOG.md  LICENSE  README2.md  nextflow.config
alphaflow_backup/assets/: methods_description_template.yml
alphaflow_backup/conf/: base.config
alphaflow_backup/docs/: README.md  usage.md
alphaflow_backup/tests/: default.nf.test
alphaflow_backup/workflows/: alphaflow.nf
assets/: adaptivecard.json  email_template.html  email_template.txt  methods_description_template.yml  multiqc_config.yml  schema_input.json  sendmail_template.txt  slackreport.json
conf/: base.config  hpc_slurm.config  test.config  test_full.config
docs/: README.md  output.md  usage.md
group_c_metric_validations_scratch/tutorial/: run_metrics.sh
microsee/: .gitignore  README.md  pyrightconfig.json
microsee/microsee_backend/: requirements.txt
microsee/microsee_frontend/: index.html  package-lock.json  package.json  tsconfig.json
module_c/: .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  index_selection.txt  run.sh
modules/: .gitignore  pyrightconfig.json
modules/groupA/: README.md
modules/groupB/: README.md
modules/groupC/: README.md
modules/groupD/microsee_report/: environment.yml  main.nf  pyproject.toml
modules/groupD/microsee_report/report_generator/: .dockerignore  Dockerfile  README.md  __init__.py  generate_report.py  integrator.py  models.py  parsers.py  requirements.txt
modules/groupD/microsee_report/report_generator/charts/: __init__.py  alpha.py  beta.py  clinical.py  comparative.py  config.py  distances.py  individual.py  insights.py  insights_charts.py  metrics.py  orchestrator.py  patient_template.html  preprocessing.py  renderer.py  stats.py  stats_helpers.py  taxonomy.py  template.html  utils.py
modules/groupD/microsee_report/tests/: conftest.py  test_charts.py  test_cli_integration.py  test_distances.py  test_parsers.py  test_preprocessing.py  test_stats_helpers.py
modules/groupD/microsee_report/tests/data/: alpha-diversity.tsv  feature-table.tsv  metadata.tsv  taxonomy.tsv
tests/: default.nf.test  nextflow.config
workflows/: abgtemplate.nf  groupA.nf  groupB.nf  groupC.nf  groupD.nf
(+391 files in other folders)
