[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "microsee-report"
version = "0.1.0"
description = "MicroSee self-contained HTML report generator for microbiome data"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
microsee-report = "report_generator.generate_report:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["report_generator*"]

[tool.setuptools.package-data]
"report_generator.charts" = ["template.html", "patient_template.html", "plotly.min.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
